--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title>ExampleJS -- Docs Assistant</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 
@@ -9,9 +9,30 @@
 
     <link href="/bulma/bulma.css" rel="stylesheet">
     <link href="/styles/main.css" rel="stylesheet">
+    <link href="/code-highlight/hybrid.css" rel="stylesheet">     
+    <link href="/codemirror/codemirror.css" rel="stylesheet">
+
+    <!-- <link href="/code-highlight/paraiso-dark.css" rel="stylesheet">  -->
+    <!-- <link href="/code-highlight/monokai.css" rel="stylesheet">    -->
+    <!-- <link href="/code-highlight/ir-black.css" rel="stylesheet">   -->
+    <!-- <link href="/code-highlight/darcula.css" rel="stylesheet">     -->
+
   </head>
   <body>
     <div id="main"></div>
+    <script type='text/javascript' src='https://api.stackexchange.com/js/2.0/all.js'></script>
+    
+    <script>
+      SE.init({
+        clientId: 10515,
+        key: 'mky1gCVsFgGKOX7dYZTJPQ((',
+        channelUrl: 'http://localhost:3000/',
+        complete(data) {
+          console.log('StackExchange Initialized...\n', data)
+        }
+      });
+    </script>
+
     <script async defer src="/bundle.js"></script>
   </body>
 </html>
