added sidebar buttons, footer

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <div id="main"></div>
-    <script type='text/javascript' src='https://api.stackexchange.com/js/2.0/all.js'></script>
+    <!-- <script type='text/javascript' src='https://api.stackexchange.com/js/2.0/all.js'></script> -->
     
-    <script>
+    <!-- <script>
       SE.init({
         clientId: 10515,
         key: 'mky1gCVsFgGKOX7dYZTJPQ((',
@@ -31,7 +31,7 @@
           console.log('StackExchange Initialized...\n', data)
         }
       });
-    </script>
+    </script> -->
 
     <script async defer src="/bundle.js"></script>
   </body>
