sidebars, tags, and voting on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/> -->
 
     <link href="/bulma/bulma.css" rel="stylesheet">
+    <!-- <link href="/font-awesome/font-awesome.css" rel="stylesheet"> -->
+    <link href="/styles/font-awesome" rel="stylesheet">
     <link href="/styles/main.css" rel="stylesheet">
     <link href="/code-highlight/hybrid.css" rel="stylesheet">     
     <link href="/codemirror/codemirror.css" rel="stylesheet">
